src/NCollection/NCollection_Map.hxx
@@ -119,10 +119,13 @@ public:
  public:
   // ---------- PUBLIC METHODS ------------
 
+  //! Empty constructor.
+  NCollection_Map() : NCollection_BaseMap (1, Standard_True, Handle(NCollection_BaseAllocator)()) {}
+
   //! Constructor
-  NCollection_Map (const Standard_Integer NbBuckets = 1,
-                   const Handle(NCollection_BaseAllocator)& theAllocator = 0L) :
-    NCollection_BaseMap (NbBuckets, Standard_True, theAllocator) {}
+  explicit NCollection_Map (const Standard_Integer theNbBuckets,
+                            const Handle(NCollection_BaseAllocator)& theAllocator = 0L)
+  : NCollection_BaseMap (theNbBuckets, Standard_True, theAllocator) {}
 
   //! Copy constructor
   NCollection_Map (const NCollection_Map& theOther) :
